kube.yaml
# gcloud builds submit --tag gcr.io/intellemo-com/chat-duckling
# kubectl apply -f kube.yaml -n chatbot

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-duckling
  namespace: chatbot
  labels:
    name: chat-duckling
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat-duckling
  template:
    metadata:
      name: chat-duckling
      namespace: chatbot
      labels:
        app: chat-duckling
    spec:
      containers:
      - name: chat-duckling
        image: gcr.io/intellemo-com/chat-duckling:0bead027fd6cf9a4d556dc91061a1029cfa5bf81
        imagePullPolicy: Always # this is required to force pull image  
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: chat-duckling
  namespace: chatbot
spec:
  type: ClusterIP
  selector:
    app: chat-duckling
  ports:
  - port: 80
    targetPort: 8000
