kube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-duckling-ingress
  namespace: chatbot
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - chat-duck.intellemo.io
    secretName: chat-duckling-tls
  rules:
  - host: chat-duck.intellemo.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat-duckling
            port:
              number: 80
